--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-form": "^1.19.5",
-    "@tanstack/react-query": "^5.87.1",
+    "@tanstack/react-query": "^5.87.4",
     "@tanstack/react-router": "^1.131.36",
     "@tanstack/react-router-devtools": "^1.131.36",
+    "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.12.1",
     "bcrypt": "^6.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
